--- a/testpage.html
+++ b/testpage.html
@@ -4,13 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Changelog</title> <!-- Custom Title -->
-  <style>
-    /* Add custom styles if needed */
-  </style>
 </head>
 <body>
   <h1>Changelog</h1>
+  <h3>Release 1.2</h3>
   <p>Here are the updates and release notes...</p>
+  <ul>
+    <li>Change 1</li>
+    <li>Change 2</li>
+    <li>Change 3</li>
+  </ul>
+  <h3>Release 1.1</h3>
+  <p>Here are the updates and release notes...</p>
+  <ul>
+    <li>Change 1</li>
+  </ul>
+  <h3>Release 1.0</h3>
+  <p>Here are the updates and release notes...</p>
+  <ul>
+    <li>Change 1</li>
+    <li>Change 2</li>
+  </ul>
   <!-- Add the rest of your changelog content here -->
 </body>
 </html>
