--- a/testpage.html
+++ b/testpage.html
@@ -7,6 +7,13 @@
 </head>
 <body>
   <h1>Changelog</h1>
+  <h3>Release 1.3</h3>
+  <p>Here are the updates and release notesdsfsfs...</p>
+  <ul>
+    <li>Change 1</li>
+    <li>Change 2</li>
+    <li>Change 3</li>
+  </ul>
   <h3>Release 1.2</h3>
   <p>Here are the updates and release notes...</p>
   <ul>
